--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,20 @@
 {
-  "require": {
-    "lib-curl": "*",
-    "symfony/dom-crawler": "v2.4.3",
-    "symfony/css-selector": "v2.4.3"
-  },
-  "require-dev": {
-  	"tracy/tracy": "dev-master",
-  	"nette/tester": "1.1.*@dev",
-    "squizlabs/php_codesniffer": "1.*",
-    "phpmd/phpmd" : "1.4.*"
+    "name": "xxdavid/jaroska-api",
+    "require": {
+        "lib-curl": "*",
+        "symfony/dom-crawler": "v2.4.3",
+        "symfony/css-selector": "v2.4.3"
+    },
+    "require-dev": {
+        "tracy/tracy": "dev-master",
+        "nette/tester": "1.1.*@dev",
+        "squizlabs/php_codesniffer": "1.*",
+        "phpmd/phpmd" : "1.4.*"
 
-  },
-  "autoload": {
-    "psr-4": {
-      "Jaroska\\": "src/"
+    },
+    "autoload": {
+        "psr-4": {
+            "Jaroska\\": "src/"
+        }
     }
-  }
 }
